Improve styles and fixe layout issues

--- a/content/_assets/styles/application.scss
+++ b/content/_assets/styles/application.scss
@@ -12,7 +12,7 @@
 // in some cases modified for, Quire as well.
 $gap: 16px;
 $tablet: 500px;
-$desktop: 700px;
+$desktop: 800px;
 $fullhd: 1344px + (2 * $gap);
 $widescreen: 1152px + (2 * $gap);
 $box-shadow: 0 2px 3px rgba($off-black, 0.1), 0 0 0;
