--- a/content/_assets/styles/components/container.sass
+++ b/content/_assets/styles/components/container.sass
@@ -1,6 +1,6 @@
 $gap: 16px !default
 $tablet: 500px !default
-$desktop: 700px !default
+$desktop: 800px !default
 $fullhd: 1344px + (2 * $gap) !default
 $widescreen: 1152px + (2 * $gap) !default
 
