--- a/content/_assets/styles/custom.css
+++ b/content/_assets/styles/custom.css
@@ -1,14 +1,99 @@
+/* Cover */
+.hero-body .container.is-fluid {
+  position: relative;
+  text-align: center;
+}
+.quire-cover__hero .contributor {
+  margin-top: 2rem;
+}
+.quire-cover__more .hero-more svg {
+  margin: 0;
+}
+
+/* Accordion sidebars */
 .accordion-section {
   background-color: #c6d1ed;
   padding: .75rem 1.25rem;
   border-radius: .5rem;
 }
+.accordion-section__body {
+  margin-top: 1rem;
+}
+
+/* Tombstone information */
 .object-info p {
   font-size: .875rem;
   margin: 1rem 0;
   padding: 0 1rem;
 }
 
-.object-filters {
+/* Fix bug, hide unused elements that are otherwise affecting layout */
+.object-filters,
+.quire-entry__tombstone {
   display: none !important;
+}
+
+/* Customize object grid widths */
+ol.object-cards-list {
+  grid-template-columns: repeat(3, 1fr) !important;
+  max-width: 1800px;
+  margin: 0 auto;
+}
+@media screen and (max-width: 1200px) {
+  ol.object-cards-list {
+    grid-template-columns: repeat(2, 1fr) !important;
+  }
+}
+@media screen and (max-width: 700px) {
+  ol.object-cards-list {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+}
+
+/* Fix display of side-by-side lightbox on desktop and mobile views */
+.side-by-side .quire-entry__lightbox {
+  height: calc(100vh - 3rem) !important;
+  top: 3rem !important;
+}
+@media screen and (max-width: 800px) {
+  .quire-entry div.side-by-side .q-figure-slides__slide-ui, 
+  .quire-entry div.side-by-side .q-lightbox-ui__navigation {
+    display: inherit;
+  }
+  .quire-entry div.side-by-side div.quire-entry__image-wrap {
+    height: calc(70vh - 3rem - 2px);
+  }
+  .side-by-side .quire-entry__lightbox {
+    height: 100% !important;
+    top: 0 !important;
+  }
+  q-image-sequence {
+    height: 100%;
+  }
+  .quire-entry div.side-by-side div.quire-entry__content {
+    height: 30vh;
+    top: 70vh;
+  }
+  .quire-entry__header .container {
+    padding-bottom: 0;
+  }
+}
+
+/* Fix display of nav labels on mobile.
+   Requires customization to _includes/components/navigation.js
+   to at <span class="nav-label"> elements */
+.quire-navbar-page-controls__item.quire-next-page a,
+.quire-navbar-page-controls__item.quire-previous-page a {
+  white-space: nowrap;
+  max-width: calc((100vw - 18rem) * .5);
+}
+@media screen and (max-width: 860px) {
+  span.nav-label {
+    display: none !important;
+  }
+}
+
+/* Hide modal icon in this case, just for aesthetic reasons */
+#glass-flask .q-figure__label-icon:first-child {
+  display: none;
 }
