--- a/content/_assets/styles/variables.scss
+++ b/content/_assets/styles/variables.scss
@@ -35,7 +35,7 @@ $quire-page-paragraph-style: line-space; // or use indent
 // Cover typography
 // -----------------------------------------------------------------------------
 $quire-cover-text-color: $white;
-$quire-cover-text-scale: 1; // use decimal numbers such as .8 or 1.3
+$quire-cover-text-scale: 1.2; // use decimal numbers such as .8 or 1.3
 
 // Menu
 // -----------------------------------------------------------------------------
